# image-render-setup

./: .gitattributes  .gitignore  3rd-party-licenses-template.txt  3rd-party-licenses.md  CONTRIBUTING.md  README.md  index.html  setup.cfg
.github/workflows/: generate-docs-main.yml  generate-docs.yml
data/wf-gen-docs/: requirements.txt
docs/: Makefile  build-all.ps1  index.ison  index_template.rst
docs/source/: CONTRIBUTING.md  auto_config.json  cathy_main.md  change-log.md  code_main.md  conf.py  index.rst  install_development.md  install_distribution.md  overview.md  powershell.md  setup.md  system_main.md  workspace_main.md
doctrees/: CONTRIBUTING.doctree  NOTICE.doctree  cathy_main.doctree  change-log.doctree  code_main.doctree  develop.doctree  environment.pickle  gui_main.doctree  index.doctree  install_development.doctree  install_distribution.doctree  license.doctree  overview.doctree  powershell.doctree  setup.doctree  system_main.doctree  workspace_main.doctree
doctrees/develop/: debug-vscode-action.doctree  debug-vscode-blender-action.doctree  debug-vscode-blender-addon.doctree  style-guide.doctree
functional-json/doctrees/: back-to-main.doctree  (+6 more)
html/: .buildinfo  CONTRIBUTING.html  NOTICE.html  cathy_main.html  change-log.html  code_main.html  develop.html  genindex.html  gui_main.html  index.html  install_development.html  install_distribution.html  license.html  objects.inv  overview.html  powershell.html  py-modindex.html  search.html  searchindex.js  setup.html  system_main.html  workspace_main.html
repos/: repos-develop.yaml  repos-main.yaml  repos-release.yaml
scripts/: CondaActivate.ps1  cathy-conda.py  show-entry-points.py
(+505 files in other folders)
