[metadata]
name = image-render-setup
version = attr: catharsys.setup.version.__version__
python_requires='>=3.10'

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    pyjson5
    tqdm
    
[options.package_data]
catharsys.setup = 
    dist/*.tar.gz
    dist/*.whl
    dist/vscode/*.zip
    dist/workspace/*.zip
    dist/template/*.zip
    dist/asset/*.zip
    dist/docs/*.zip
    scripts/*.py
    data/*.json

[options.packages.find]
where = src
exclude = dev

[options.entry_points]
console_scripts =
    cathy = catharsys.setup.cmd.cathy:RunCli
    
catharsys.commands =
    install = catharsys.setup.cmd.install_main
    uninstall = catharsys.setup.cmd.uninstall
    build = catharsys.setup.cmd.build_main
    code = catharsys.setup.cmd.code_main
    repos = catharsys.setup.cmd.repos_main
    test = catharsys.setup.cmd.test

catharsys.commands.code = 
    format = catharsys.setup.cmd.code_format
    init = catharsys.setup.cmd.code_init
    show = catharsys.setup.cmd.code_show

catharsys.commands.build =
    docs = catharsys.setup.cmd.build_docs
    modules = catharsys.setup.cmd.build_modules
    workspace = catharsys.setup.cmd.build_workspace
    setup = catharsys.setup.cmd.build_setup
    
catharsys.commands.install =
    system = catharsys.setup.cmd.install_system
    workspace = catharsys.setup.cmd.install_workspace
    asset = catharsys.setup.cmd.install_asset
    template = catharsys.setup.cmd.install_template
    
catharsys.commands.repos =
    release = catharsys.setup.cmd.repos_release
    update = catharsys.setup.cmd.repos_update
